// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Popover /> create Popover 1`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 2`] = `
<div
  className="fd-popover blue"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 3`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`<Popover /> create Popover 4`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <span
        className="sap-icon--cart sap-icon--xl"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
